--- a/style.scss
+++ b/style.scss
@@ -1,46 +1,70 @@
+a:hover {
+    color: orange !important;
+}
 header {
     .container {
         width: 80%;
         margin: auto;
     }
-}
+    nav {
+        background-color: #E7E5DF;
+        padding: 0 !important;    
+    }
+    ul a {
+        color: rgb(70, 48, 48) !important;
+        font-size: 13px;
+        font-weight: bold;
+    }
+}       
 .context-dark {
-    color: rgba(255, 255, 255, 0.8);
+    color: rgb(39, 19, 19) !important;
 }
 footer {
-    padding: 20px 0px;
+    padding: 5px 0px;
     ul, ol {
         list-style: none;
         padding: 0;
         margin: 0;
     }
+    background-color: #E7E5DF;
 }
 .footer-classic a, .footer-classic a:focus, .footer-classic a:active {
-    color: #ffffff;
-}
-.nav-list{ 
-    li {
-        padding-top: 5px;
-        padding-bottom: 5px;
-        a:hover {
-           color: lightcoral;
-        }
-    }
+    color: rgb(39, 19, 19) !important;
 }
 
 
 
 .bgimage {
     width:100%;
-    max-height:500px;
-    background: url('./main.jpg');
+    height: 500px;
+    background: url('./main.jpg') yellow;
+    opacity: 0.8;
     background-repeat: no-repeat;
     background-position: left;
     background-size:cover;
-    background-attachment: fixed;
     margin-bottom: 0;
     h5 {
         color:white;
         text-shadow:2px 2px #333;
       }
+      .display-5 {
+        font-weight: bold ;
+        color: white;
+        margin-bottom: 30px;
+        text-align: justify;
+    }
+  }
+  #contact {
+      font-size: 13px;
+      h5, p {
+          margin: 0
+      }
+  }
+  #developer {
+      color: white;
+      background-color: #A49694;
+      a {
+          color: rgb(226, 217, 217) !important;
+      }
+
   }
