--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ footer ul, footer ol {
 .bgimage {
   width: 100%;
   height: 500px;
-  background: url("./main.jpg") yellow;
+  background: url("./main.jpg");
   opacity: 0.8;
   background-repeat: no-repeat;
   background-position: left;
