--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 a:hover {
-    color: orange !important;
+    color: grey !important;
 }
 header {
     .container {
@@ -7,7 +7,7 @@ header {
         margin: auto;
     }
     nav {
-        background-color: #E7E5DF;
+        background-color: lightsteelblue;
         padding: 0 !important;    
     }
     ul a {
@@ -26,7 +26,7 @@ footer {
         padding: 0;
         margin: 0;
     }
-    background-color: #E7E5DF;
+    background-color: lightsteelblue;
 }
 .footer-classic a, .footer-classic a:focus, .footer-classic a:active {
     color: rgb(39, 19, 19) !important;
@@ -37,7 +37,7 @@ footer {
 .bgimage {
     width:100%;
     height: 500px;
-    background: url('./main.jpg') yellow;
+    background: url('./main.jpg');
     opacity: 0.8;
     background-repeat: no-repeat;
     background-position: left;
