--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ header {
         margin: auto;
     }
     nav {
-        background-color: lightsteelblue;
+        background-color:#73c2fb;
         padding: 0 !important;    
     }
     ul a {
@@ -26,7 +26,7 @@ footer {
         padding: 0;
         margin: 0;
     }
-    background-color: lightsteelblue;
+    background-color:  #73c2fb;
 }
 .footer-classic a, .footer-classic a:focus, .footer-classic a:active {
     color: rgb(39, 19, 19) !important;
